--- a/glide.yaml
+++ b/glide.yaml
@@ -1,2 +1,7 @@
 package: .
-import: []
+import:
+- package: github.com/NYTimes/gizmo
+  subpackages:
+  - config
+  - server
+- package: github.com/Sirupsen/logrus
