Change import path of the project
Signed-off-by: Xabier Larrakoetxea <xilarrakoetxea@qdqmedia.com>

--- a/environment/docker-compose.yml
+++ b/environment/docker-compose.yml
@@ -3,7 +3,7 @@ app:
   dockerfile: Dockerfile
 
   volumes:
-    - ./../:/go/src/gitlab.qdqmedia.com/shared-projects/riakapi
+    - ./../:/go/src/github.com/tsuru/riakapi
 
   command: "/bin/true"
 
