--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 sudo: required
 
+language: go
+
 services:
     - docker
+
+env:
+  COMPOSE_VERSION: 1.5.0
+
+before_install:
+ - curl -L https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+ - chmod +x docker-compose
+ - sudo mv docker-compose /usr/local/bin
 
 script:
   - make ci_test
